style: 검색 중 텍스트 색상을 흰색으로 변경

--- a/results.html
+++ b/results.html
@@ -27,7 +27,7 @@
         
         <div id="loading" class="loading">
             <div class="spinner"></div>
-            <p>검색 중...</p>
+            <p class="color-white">검색 중...</p>
         </div>
     </div>
     
